fixed v image being too wide

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,8 +248,8 @@ Swag
 .swag h1 span { display: block; margin-top: 20px; }
 .down-arrow-btn { width: 40px; height: 40px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.8); display: inline-block; margin: 10px auto 20px; color: #fff; line-height: 40px; text-align: center; }
 .down-arrow-btn:hover, .down-arrow-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
-.swag-more-btn { font-size: 1em; margin-top: 8em; background: rgb(128, 0, 200); padding: 1em 2em; color: rgb(255, 255, 0); text-transform: uppercase; letter-spacing: 1px; display: inline-block; 
--webkit-box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); -moz-box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); margin: 60px 0 0; font-weight: bold; }
+.swag-more-btn { font-size: 1em; margin: 10em 0 0; background: rgb(128, 0, 200); padding: 1em 2em; color: rgb(255, 255, 0); text-transform: uppercase; letter-spacing: 1px; display: inline-block; 
+-webkit-box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); -moz-box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); box-shadow: 0px 3px 0px 0px rgb(80, 0, 100); font-weight: bold; }
 .swag-more-btn:hover, .swag-more-btn:focus { background: rgb(255, 255, 0); color: rgb(80, 0, 100); }
 /* ==========================================================================
 Portfolio
